--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ anyio==4.3.0
 blinker==1.7.0
 certifi==2024.2.2
 click==8.1.7
+dataclasses==0.6
 distro==1.9.0
 exceptiongroup==1.2.0
 Flask==3.0.2
@@ -20,4 +21,5 @@ python-dotenv==1.0.1
 sniffio==1.3.1
 tqdm==4.66.2
 typing_extensions==4.10.0
+urllib3==2.2.1
 Werkzeug==3.0.1
